--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,6 +1,18 @@
 branch-defaults:
-  default:
+  master:
     environment: null
     group_suffix: null
 global:
+  application_name: server
+  branch: null
+  default_ec2_keyname: aiserver_key
+  default_platform: Python 3.8 running on 64bit Amazon Linux 2
+  default_region: ap-northeast-2
+  include_git_submodules: true
+  instance_profile: null
+  platform_name: null
+  platform_version: null
   profile: eb-cli
+  repository: null
+  sc: git
+  workspace_type: Application
