--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,6 +1,6 @@
 branch-defaults:
   master:
-    environment: null
+    environment: server-dev
     group_suffix: null
 global:
   application_name: server
