--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,3 +1,3 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
-	    WSGIPath: nst.wsgi:application # 여기서 nst 는 프로젝트 명을 뜻합니다. 만약에 위에서 프로젝트를 config 로 만드셨다면 config.wsgi:application 이라고 작성하셔야합니다!
+	    WSGIPath: projectAI.wsgi:application # 여기서 nst 는 프로젝트 명을 뜻합니다. 만약에 위에서 프로젝트를 config 로 만드셨다면 config.wsgi:application 이라고 작성하셔야합니다!
